# soundboard

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  generate_clangd_config.sh  mappings.csv.example  partitions.csv  sdkconfig.defaults  setup_vscode.sh
docs/: ESP-USB.md  GPIO_ALLOCATION.txt
docs/jabra510/: ESPRESSIF_UAC_GUIDE.md  JABRA_510_FIX.md  hid-decode.txt  lsusb.txt  lsusb_explained.txt  uac_hotplug_troubleshooting.md  volume_calibration.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_state.h  benchmark.c  benchmark.h  idf_component.yml  main.c  soundboard.h
main/core/: console.c  console.h  display.cpp  display.h  input_scanner.c  input_scanner.h  sd_card.c  sd_card.h
main/player/: mapper.c  mapper.h  persistent_volume.c  persistent_volume.h  player.c  player.h  provider.c  provider.h
main/usb/: msc.c  msc.h
scripts/: README.md  code_metrics.py
sons/: generate_mapping.py  generate_sheet.py  normalize.sh
spiffs/: mappings.csv
